--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,36 @@
 </head>
 <body>
 
+<!-- Navigation -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="container">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<%= link_to "SkyCast", root_url, class: "navbar-brand" %>
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<% if current_user %>
+
+				<li><%= link_to "Dashboard", dashboard_path %></li>
+				<li><%= link_to "Log Out", logout_path %></li>
+
+				<% else %>
+
+				<li><%= link_to "Sign In", login_path %>
+				<%end %>
+			</ul>
+		</div>
+		<!-- /.navbar-collapse -->
+	</div>
+
 <%= yield %>
 
 </body>
