add bootstrap and nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,12 +31,13 @@
 
 				<% else %>
 
-				<li><%= link_to "Sign In", login_path %>
+				<li><%= link_to "Sign In", login_path %></li>
 				<%end %>
 			</ul>
 		</div>
 		<!-- /.navbar-collapse -->
 	</div>
+</nav>
 
 <%= yield %>
 
