--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Welcome to SkyCast!</h1>
 
+<div id="map-canvas" style="display: none;"></div>
+
+<%= button_to "test", "#", id: "test" %>
+
+<div id="forecast-div">
+
+</div>
