add js function to grab the formatted address for given lat/lng and display it on page

--- a/app/views/welcome/_test.html.erb
+++ b/app/views/welcome/_test.html.erb
@@ -1,4 +1,6 @@
 <div id="forecast-div">
+
+	<h1>Forecast for: <%= @location.formatted_address %></h1>
 	<div>
 		<h2>Daily</h2>
 	<% @daily.each do |daily| %>
