--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,12 @@
 
 <div id="map-canvas" style="display: none;"></div>
 
-<%= button_to "test", "#", id: "test" %>
+<div class="search-forecast">
+	<%= form_for @location do |f| %>
+		<%= f.text_field :formatted_address, placeholder: "Search Location", class: 'form-control location-search' %>
+	<% end %>
+</div>
 
 <div id="forecast-div">
-
+	<h2>Loading Forecast for your current location...</h2>
 </div>
