--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,16 @@
 				<% else %>
 
 				<li><%= link_to "Sign In", login_path %></li>
+				<li> <%= link_to "Sign Up", new_user_path %></li>
 				<%end %>
 			</ul>
 		</div>
 	</div>
 </nav>
 
+<div class="main-container">
 <%= yield %>
+</div>
 
 </body>
 </html>
