add loading gif

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,4 +4,5 @@
 
 <div id="forecast-div">
 	<h2>Loading Forecast for your current location...</h2>
+	<%= image_tag "triangle.gif", class: "loading-img" %>
 </div>
